<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TESSIES</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenido">"Bienvenido a la aplicación móvil de Tessie! "</string>
    <string name="button_continuar">Continuar</string>
    <string name="nuestro_menu">Menú</string>
    <string name="acerca_de_but">Acerca de Nosotros</string>
    <string name="donde_estamos_but">Donde Estamos</string>
    <string name="mi_cuenta_but">Mi cuenta Tessie</string>
    <string name="title_activity_act_mapa">Act_mapa</string>
    <string name="title_activity_act__mapa">Act_Mapa</string>
    <string name="txt_donde_estamos">&quot;Tessie: El restaurant de Ronny y Natasha. Calle la Cumbre, Urb. La Encantada, Cod Postal 68018. Telefonos: 04123251298 / 04242740719 &quot;</string>
    <string name="mapa_ir_a_rest">"Ir a Tessie's "</string>
    <string name="ir_a_mi_loc">"Ir a mi locación "</string>
    <string name="title_activity_act_acercade">Act_acercade</string>
    <string name="acerca_de_txt">Tessie. Nacido en Abril de 2014, Tessie es un establecimiento de venta y consumo de alimentos ficticio, inventado con el motivo de servir como establecimiento piloto para la implementación de una plataforma automatizada para la atención al cliente. Creado por Ronny Ayala y Natasha Martínez, como parte de sus objetivos a cumplir para optar por la obtención del título de Ingenieros en Telecomunicaciones, en la Universidad Católica Andrés Bello</string>
    <string name="clave">Introduzca su Password</string>
    <string name="title_activity_fragmento_1">Fragmento_1</string>
    <string name="title_activity_act__login">Iniciar Sesión</string>
    <string name="registrarse_login">Registrarse</string>
    <string name="action_sign_in">INICIAR SESIÓN</string>
    <string name="acion_sign_up">REGISTRARSE</string>
    <string name="nombre_usuario"></string>
    <string name="apellido_usuario"></string>
    <string name="cedula_usuario"></string>
    <string name="password_confirm">Confirme su contraseña</string>
    <string name="confirmar_contrasena_signup"></string>
    <string name="telefono_signup">Teléfono móvil</string>
    <string name="but_iniciar_sesion">Iniciar Sesión</string>
    <string name="nombre_usuario_hint">Nombres</string>
    <string name="apellido_usuario_hint">Apellidos</string>
    <string name="cedula_usuario_hint">Cédula</string>
    <string name="contrasena_signup"></string>
    <string name="contrasena_signup_hint">Contraseña</string>
    <string name="confirmar_contrasena_signup_hint">Confirme su contraseña</string>
    <string name="cerrar_sesion_string">Cerrar Sesión</string>
    <string name="title_activity_act__ppal">TESSIES</string>
    <string name="title_activity_act__micuenta">Act_Micuenta</string>
    <string name="title_activity_act__menu">Act_Menu</string>
    <string name="butt_actualizarcuenta_txt">Actualizar Datos</string>
    <string name="title_activity_act__menu_3">Act_Menu_3</string>
    <string name="title_activity_act_push">ActPush</string>
    <string name="texttblabel_cedula">Cédula</string>
    <string name="texttblabel_nombre">Nombres</string>
    <string name="texttblabel_apellido">Apellidos</string>
    <string name="texttblabel_correo">Correo Electrónico</string>
    <string name="texttblabel_telefono">"Teléfono "</string>
    <string name="datos_personales_str">Información personal</string>
    <string name="but_realizarpedido_menu">Realizar pedido</string>
    <string name="title_activity_act_detallespedido">Act_detallespedido</string>
    <string name="title_activity_act__realizar_pago">Act_RealizarPago</string>
    <string name="title_activity_act_carrito">Act_carrito</string>

</resources>